# open-skele

./: README.md
projL/: CMakeLists.txt
projL/src/: main.cpp
projL/src/includes/: cam.hpp  gl.h  sheader.hpp
